{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 5,
  "lineage": "a689dee5-5a53-221d-24f7-ba5cbfecefb3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group/sg-051cdb1fc4bc1060e",
            "description": "managed by terraform",
            "egress": [],
            "id": "sg-051cdb1fc4bc1060e",
            "ingress": [],
            "name": "terraform-firewall",
            "name_prefix": "",
            "owner_id": "844416514196",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-004d3065b8de617b4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sg-051cdb1fc4bc1060e",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group-rule/sgr-09c3df7ab785f1210",
            "cidr_ipv4": "101.20.30.50/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-09c3df7ab785f1210",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-051cdb1fc4bc1060e",
            "security_group_rule_id": "sgr-09c3df7ab785f1210",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sgr-09c3df7ab785f1210",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ftp_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group-rule/sgr-0bdca5de59a3f05df",
            "cidr_ipv4": "101.20.30.50/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 21,
            "id": "sgr-0bdca5de59a3f05df",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-051cdb1fc4bc1060e",
            "security_group_rule_id": "sgr-0bdca5de59a3f05df",
            "tags": null,
            "tags_all": {},
            "to_port": 21
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sgr-0bdca5de59a3f05df",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group-rule/sgr-0b0a573003036cb46",
            "cidr_ipv4": "101.20.30.50/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b0a573003036cb46",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-051cdb1fc4bc1060e",
            "security_group_rule_id": "sgr-0b0a573003036cb46",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sgr-0b0a573003036cb46",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}